Revision history for Perl extension Sys::Info::Driver::OSX.

0.794 Thu May 12 05:48:29 2011
    => Implement install date.

0.793 Tue May 10 03:02:09 2011
    => sysctl parser regex fix.
    => More verbose error message.

0.792 Tue May 10 03:02:09 2011
    => sysctl parser fix.

0.791 Mon May  9 01:45:35 2011
    => Another bitness fix.

0.79 Sun Apr 24 00:21:09 2011
    => Check the values in cpu::bitness to prevent die()ing.

0.78 Sat Apr 16 15:45:12 2011
    => Just increased the version number.

0.73 Tue Jan 11 02:13:45 2011
    => First release. Currently not enabled in Sys::Info.