@@ -2,6 +2,7 @@ Revision history for Perl extension Sys::Info::Driver::OSX.
 
 0.794 Thu May 12 05:48:29 2011
     => Implement install date.
+    => Improve sysctl parsers.
 
 0.793 Tue May 10 03:02:09 2011
     => sysctl parser regex fix.
